# rust_graphql_website

./: README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: index.js
client/src/pages/: Page.js
server/: Cargo.toml  Dockerfile  Rocket.toml
server/src/: main.rs
server/src/schema/: schema.rs
